fix: fix "click anywhere" text on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,9 @@ html {
 }
 
 #audioModal {
-	line-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #audioModal.fadeOut {
